[package]
name = "vyges-char"
version = "0.1.5"
edition = "2021"
description = "Standard-cell timing & power characterization: SPICE in, Liberty (.lib) out, in parallel."
license = "Apache-2.0"
authors = ["Vyges <https://vyges.com/contact>"]
homepage = "https://vyges.com"
repository = "https://github.com/vyges-tools/char"

# std-only (no external dependencies) so the core builds/tests offline.

[[bin]]
name = "vyges-char"
path = "src/main.rs"

[lib]
name = "vyges_char"
path = "src/lib.rs"
